<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="20px"
    android:background="#A0CAF3"
    android:id="@+id/tajbiContainer">

    <!--Developer contact: +8801709409266-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <!--image-->

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/bismillah"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/countText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:background="@drawable/display"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingBottom="2dp"
                android:textSize="80sp"
                />

            <TextView
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/plus"
                android:drawableRight="@android:drawable/btn_star_big_on"
                android:padding="10dp"
                android:text="@string/plus_one"
                android:textSize="25sp"
                android:gravity="center"
                android:textStyle="bold"
                android:background="@drawable/button"
                app:backgroundTint="#F1A77F" />

            <TextView
                android:id="@+id/btnSub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#ff4da6"
                android:drawableLeft="@drawable/minus1"
                android:drawableRight="@android:drawable/btn_star_big_on"
                android:padding="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/minus_one"
                android:background="@drawable/button"
                android:textSize="25sp" />


            <!--       footer section start-->

            <TextView
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:drawableLeft="@drawable/baseline_refresh_24"
                android:drawableRight="@android:drawable/btn_star_big_on"
                android:padding="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:backgroundTint="#00BF0A"
                android:text="@string/reset"
                android:background="@drawable/button"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="30"
                android:gravity="center"
                android:layout_marginTop="18dp"
                >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:text="@string/jikie1"
                    android:textSize="15sp"
                    android:backgroundTint="#751aff"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:layout_weight="10"
                    android:layout_margin="5dp"
                    android:background="@drawable/button"
                    />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:text="@string/jikir2"
                    android:textSize="15sp"
                    android:backgroundTint="#333300"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:layout_weight="10"
                    android:layout_margin="5dp"
                    android:background="@drawable/button"
                    />
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:text="@string/jikir3"
                    android:textSize="15sp"
                    android:backgroundTint="#ff8c1a"
                    android:gravity="center"
                    android:layout_weight="10"
                    android:layout_margin="5dp"
                    android:padding="4dp"
                    android:background="@drawable/button"
                    android:textColor="#fff"
                    />



            </LinearLayout>

            <!--footer section end-->

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom|right">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/developer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="0dp"
                android:gravity="bottom|right"
                android:padding="10dp"
                android:textAllCaps="true"
                android:textStyle="italic"
                android:text="@string/company"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>